# quadratic

./: .clabot  .cursorrules  .dockerignore  .env  .env.docker  .env.example  .env_example  .eslintignore  .firebaserc  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .slugignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE_SHORT  ONBOARDING.md  PLAYBOOK.md  Pipfile  Procfile  README.md  VERSION  amplify.yml  api_plan.txt  app.json  bump.sh  client.Dockerfile  codecov.yaml  components.json  config-overrides.js  craco.config.js  customize_auth.py  dev-rust-state.json  (+22 more)
dev-rust/: .gitignore  Cargo.toml  README.md  state.json
dev-rust/src/: checks.rs  cli.rs  control.rs  kill.rs  main.rs  server.rs  service_manager.rs  target.rs  types.rs
dev-rust/static/: api.js  index.html  logs.js  services.js  state.js  styles.css  ui.js  utils.js  websocket.js
experiments/arrow-tables/: Cargo.toml
poc/number_type/: Cargo.toml
quadratic-cloud-controller/: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  generate-keys.sh  package.json
quadratic-cloud-controller/src/: background_workers.rs  config.rs  controller.rs  controller_docker.rs  controller_k8s.rs  error.rs  handle.rs  health.rs  main.rs  quadratic_api.rs  server.rs  test_util.rs  worker.rs
quadratic-cloud-worker/: Cargo.toml  Dockerfile  README.md  entrypoint.sh  package.json  rust-toolchain.toml
quadratic-cloud-worker/src/: config.rs  error.rs  main.rs  simple.rs  thumbnail.rs  worker.rs  worker_test.rs
quadratic-connection/: .env.docker  .env.example  .env.test  Cargo.toml  Dockerfile  README.md  app.json  package.json
quadratic-connection/src/: auth.rs  config.rs  connection.rs  error.rs  header.rs  health.rs  main.rs  proxy.rs  server.rs  ssh.rs  synced_connection.rs  test_util.rs
quadratic-core/: Cargo.toml  README.md  benches.sh  build.rs  build.sh  index.html  index.js  package.json  rust-toolchain.toml  rustfmt.toml  tmp.txt  types.d.ts
quadratic-core-cloud/: .env.example  .env.test  Cargo.toml  Dockerfile  README.md  package.json  receive_get_cells.py  test_stdout_capture.py
quadratic-core-cloud/src/: auth.rs  config.rs  connection.rs  core.rs  error.rs  file.rs  health.rs  lib.rs  main.rs  multiplayer.rs  scheduled_tasks.rs  server.rs  test_util.rs  worker.rs
quadratic-core-shared/: Cargo.toml
quadratic-core-shared/src/: array_size.rs  borders.rs  bounds.rs  cell_labels.rs  color.rs  constants.rs  fills.rs  formatting.rs  ids.rs  language.rs  lib.rs  messages.rs  pos.rs  rect.rs  ref_adjust.rs  render_code_cell.rs  renderer_constants.rs  serialization.rs  sheet_rect.rs  util.rs  viewport.rs
quadratic-core/.cargo/: config.toml
quadratic-core/benches/: autocomplete_formula.rs  clipboard_formula.rs  grid_benchmark.rs  import_csv.rs  import_excel.rs  mod.rs  move_cells.rs
quadratic-core/bindings/: Array.ts  ArraySize.ts  Axis.ts  BoolSummary.ts  CellAlign.ts  CellBorder.ts  CellBorderStyle.ts  CellBorders.ts  CellRef.ts  CellRefCoord.ts  CellValue.ts  CellWrap.ts  CodeCellLanguage.ts  CodeCellRunOutput.ts  CodeCellRunResult.ts  CodeCellValue.ts  ColumnId.ts  Duration.ts  Error.ts  ErrorMsg.ts  GridBounds.ts  Instant.ts  JsCellRefSpan.ts  JsCodeResult.ts  JsFormattingSummary.ts  JsFormulaParseResult.ts  JsRenderBorder.ts  JsRenderCell.ts  JsRenderCodeCell.ts  JsRenderFill.ts  NumericFormat.ts  NumericFormatKind.ts  Pos.ts  RangeRef.ts  Rect.ts  RowId.ts  SheetId.ts  Span.ts  Value.ts
quadratic-core/data/: 1-partition-brotli.parquet  1-partition-gzip.parquet  1-partition-lz4.parquet  1-partition-none.parquet  1-partition-snappy.parquet  1-partition-zstd.parquet  2-partition-brotli.parquet  2-partition-gzip.parquet  2-partition-lz4.parquet  2-partition-none.parquet  2-partition-snappy.parquet  2-partition-zstd.parquet  README.md  data.arrow  generate_data.py  generate_geo_data.py  naturalearth_cities_geoarrow.parquet  naturalearth_cities_wkb.parquet  pyproject.toml
quadratic-core/examples/: airports.json  ebola_data_db_format.csv  startup_portfolio.grid  startup_portfolio.json  v1_0.grid  v1_3.grid  v1_3_numeric_format.grid  v1_3_python.grid  v1_3_single_code_cell.grid  v1_4.grid  v1_4.json  v1_4_airports_distance.grid  v1_4_full_featured.grid  v1_4_simple.grid  v1_4_simple.json  v1_5.json  v1_5_full_featured.json  v1_5_simple.grid  v1_5_simple.json
quadratic-core/proptest-regressions/: rect.txt
quadratic-core/scripts/: watch-test.js
quadratic-core/src/: Fixes: Ory variables are not configured .py  a1.rs  api.rs  border_style.rs  cell.rs  clear_option.rs  color.rs  compression.rs  constants.rs  controller.rs  copy_formats.rs  date_time.rs  error.rs  error_core.rs  error_run.rs  ext.rs  fetch.rs  lib.rs  old_selection.rs  pos.rs  position.rs  reader.rs  rect.rs  renderer_constants.rs  rle.rs  selection.rs  sheet_rect.rs  small_timestamp.rs  span.rs  test_util.rs  util.rs  utils.rs  viewport.rs
quadratic-core/test-files/: Total revenue.grid  borders.xlsx  borders_1_6.grid  date_time.xlsx  date_time_formats_arrow.parquet  date_time_formats_arrow.py  income_statement.xlsx  named_range.xlsx  simple.xlsx  styles.xlsx  test_getCells_migration.grid  v1.7_negative_offsets.grid
quadratic-files/: .env.docker  .env.example  .env.test  Cargo.toml  Dockerfile  README.md  package.json
quadratic-files/src/: auth.rs  config.rs  error.rs  file.rs  health.rs  main.rs  server.rs  storage.rs  test_util.rs  truncate.rs
quadratic-grid-offsets/: Cargo.toml  package.json
quadratic-grid-offsets/src/: lib.rs
quadratic-kernels/python-wasm/: README.md  (+10 more)
quadratic-multiplayer/: .env.docker  .env.example  .env.test  Cargo.toml  Dockerfile  README.md  Untitled  build.rs  package.json
quadratic-rust-client/: Cargo.toml  README.md  package.json
quadratic-rust-renderer/: Cargo.toml  INTEGRATION_PLAN.md  README.md  package.json  rust-toolchain.toml  rust_out  serve.sh  tsconfig.json  vite.config.ts
quadratic-rust-shared/: .gitignore  Cargo.toml  README.md  build.rs  package.json
rust-shared/: Cargo.toml
(+9411 files in other folders)
