[workspace]
resolver = "3"
members = [
    "quadratic-rust-shared",
    "quadratic-core",
    "quadratic-connection",
    "quadratic-multiplayer",
    "quadratic-files",
]

[workspace.package]
license-file = "LICENSE"
description = "Infinite data grid with Python, JavaScript, and SQL built-in"
repository = "https://github.com/quadratichq/quadratic"
