[workspace]
resolver = "2"
members = [
  "quadratic-connection",
  "quadratic-core",
  "quadratic-files",
  "quadratic-multiplayer",
  "quadratic-rust-shared",
]
exclude = ["poc/number_type"]

[workspace.package]
authors = ["Quadratic"]
edition = "2024"
description = "Infinite data grid with Python, JavaScript, and SQL built-in"
repository = "https://github.com/quadratichq/quadratic"
license-file = "LICENSE"
version = "0.19.2"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
