[workspace]
resolver = "2"
members = [
  "quadratic-connection",
  "quadratic-core",
  "quadratic-cloud-controller",
  "quadratic-cloud-worker",
  "quadratic-core-cloud",
  "quadratic-files",
  "quadratic-multiplayer",
  "quadratic-rust-shared",
  "quadratic-rust-renderer/core",
  "quadratic-rust-renderer/native",
]
exclude = ["poc/number_type", "dev-rust"]

[workspace.package]
authors = ["Quadratic"]
edition = "2024"
description = "Infinite data grid with Python, JavaScript, and SQL built-in"
repository = "https://github.com/quadratichq/quadratic"
license-file = "LICENSE"
version = "0.24.0"

# TODO(ddimaria): add shared dependencies here
[workspace.dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Enable thin LTO for better dead code elimination across crates
lto = "thin"
