[package]
name = "dev-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dev-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
