[package]
name = "quadratic-cloud-controller"
version = "0.23.11"
edition = "2024"
authors = ["Quadratic"]
description = "Kubernetes controller for file workers in Quadratic Cloud Kubernetes cluster"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["json"] }
chrono = { version = "=0.4.39", features = ["serde"] }
dashmap = "6"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.29"
futures-util = "0.3.30"
jsonwebtoken = "9.2.0"
k8s-openapi = { version = "0.25.0", features = ["v1_31"], optional = true }
kube = { version = "1.1.0", features = ["client", "derive"], optional = true }
quadratic-rust-shared = { path = "../quadratic-rust-shared", features = [
  "auth",
  "environment",
  "pubsub",
  "quadratic-api",
  "quadratic-cloud",
  "storage",
] }
redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = { version = "2" }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
httpmock = "0.8"
serial_test = "3.2"

[features]
default = ["docker"]
docker = ["quadratic-rust-shared/docker"]
kubernetes = ["k8s-openapi", "kube"]
