[package]
name = "quadratic-cloud-worker"
version = "0.24.0"
edition = "2024"
authors = ["Quadratic"]
description = "File processing worker for Quadratic Cloud"

[dependencies]
anyhow = "1.0"
envy = "0.4.2"
quadratic-core-cloud = { path = "../quadratic-core-cloud" }
quadratic-rust-shared = { path = "../quadratic-rust-shared", features = [
  "quadratic-cloud",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

# create a binary from the simple.rs file
[[bin]]
name = "simple"
path = "src/simple.rs"