[package]
name = "quadratic-cloud-worker"
version = "0.24.1"
edition = "2024"
authors = ["Quadratic"]
description = "File processing worker for Quadratic Cloud"

[dependencies]
envy = "0.4.2"
quadratic-core = { path = "../quadratic-core", default-features = false, features = ["js"] }
quadratic-core-cloud = { path = "../quadratic-core-cloud" }
quadratic-renderer-core = { path = "../quadratic-rust-renderer/core", features = ["wgpu"] }
quadratic-renderer-native = { path = "../quadratic-rust-renderer/native" }
quadratic-rust-shared = { path = "../quadratic-rust-shared", features = [
  "quadratic-cloud",
] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "tracing-log"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

# create a binary from the simple.rs file
[[bin]]
name = "simple"
path = "src/simple.rs"