[package]
name = "quadratic-connection"
version = "0.24.1"
edition = "2024"
authors = ["David DiMaria <david.dimaria@quadratichq.com>"]

[dependencies]
arrow = "54.2.1"
arrow-schema = "54.2.1"
arrow-json = "54.2.1"
axum = { version = "0.7.1", features = ["macros", "tokio"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
bytes = "1.6.0"
chrono = { version = "=0.4.39", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.29"
futures-util = { version = "0.3.29", default-features = false, features = [
  "sink",
  "std",
] }
headers = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
hyper-util = { version = "0.1.5", features = ["service"] }
jsonwebtoken = "9.2.0"
log = "0.4.21"
parquet = { version = "54.2.1", default-features = false, features = [
  "arrow",
  "arrow-array",
  "json",
] }
quadratic-rust-shared = { path = "../quadratic-rust-shared", features = [
  "auth",
  "cache",
  "environment",
  "intrinio",
  "multiplayer",
  "net",
  "object_store",
  "parquet",
  "quadratic-api",
  "storage",
  "sql",
  "synced",
] }
reqwest = { version = "0.11.22", default-features = false, features = [
  "cookies",
  "json",
  "rustls-tls-native-roots",
  "serde_json",
  "stream",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.26.3"
strum_macros = "0.25.3"
thiserror = "1.0.50"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = [
  "auth",
  "compression-gzip",
  "cors",
  "fs",
  "sensitive-headers",
  "trace",
  "util",
  "validate-request",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
dotenv = "0.15.0"
fake = { version = "2.9.1", features = ["derive"] }
tracing-test = "0.2.4"

[features]
default = ["files", "rust_analyzer"]
rust_analyzer = []
multiplayer = []
files = []
