[package]
name = "quadratic-core-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow = "1.0"
indexmap = { version = "2.8.0", features = ["serde"] }
itertools = "0.14.0"
lazy_static = "1.4.0"
proptest = "1.9.0"
proptest-derive = "0.5.0"
regex = "1.7"
rstar = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6.0", optional = true }
smallvec = { version = "1.11.0", features = ["serde", "union"] }
strum_macros = "0.27.1"
ts-rs = { git = "https://github.com/quadratichq/ts-rs/", branch = "update-v10", optional = true, features = [
  "uuid-impl",
  "smallvec-impl",
  "no-serde-warnings",
] }
uuid = { version = "1.13.1", features = ["serde", "v4", "rng-rand"] }
wasm-bindgen = { version = "0.2.100", optional = true }

[features]
default = ["js"]
js = ["serde-wasm-bindgen", "ts-rs", "wasm-bindgen"]
