[package]
name = "quadratic-core"
version = "0.5.2"
authors = ["Andrew Farkas <andrew.farkas@quadratic.to>"]
edition = "2021"
description = "Infinite data grid with Python, JavaScript, and SQL built-in"
repository = "https://github.com/quadratichq/quadratic"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "docgen"
path = "src/bin/docgen.rs"

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"

[[bin]]
name = "generate_blank_current_file"
path = "src/bin/generate_blank_current_file.rs"

[features]
default = ["console_error_panic_hook", "js"]
# "js" feature is disabled for testing (particularly WASI benchmarks)
js = [
    "js-sys",
    "serde-wasm-bindgen",
    "ts-rs",
    "wasm-bindgen",
    "wasm-bindgen-futures",
]
show-operations = []
multiplayer = []
files = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1.63"
futures = "0.3.25"
itertools = "0.10.5"
rand = "0.8.5"
getrandom = { version = "*", features = ["js"] }
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
smallvec = { version = "1.11.0", features = ["serde", "union"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.3"
tabled = { version = "0.14.0", features = ["color"] }
pollster = "0.2.5"
unicode-case-mapping = "0.5.0"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# JS dependencies that break the WASI build (which we need for benchmarks)
js-sys = { version = "0.3.60", optional = true }
serde-wasm-bindgen = { version = "0.6.0", optional = true }
ts-rs = { git = "https://github.com/quadratichq/ts-rs/", rev = "812c1a8", optional = true, features = [
    "uuid-impl",
    "smallvec-impl",
] }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.33", optional = true }
lexicon_fractional_index = "0.0.3"
htmlescape = "0.3.1"
bigdecimal = { version = "0.4.1", features = ["serde"] }
csv = "1.2.2"
indexmap = { version = "2.0.2", features = ["serde"] }
thiserror = "1.0.52"
lazy_static = "1.4.0"
parquet = { version = "51.0.0", default-features = false, features = [
    "arrow",
    "arrow-array",
    "flate2",
    "snap",
] }
bytes = "1.5.0"
arrow-array = "51.0.0"
arrow-schema = "51.0.0"
arrow-buffer = "51.0.0"
arrow-data = "51.0.0"
half = "2.4.0"
calamine = { version = "0.24.0", features = ["dates"] }
bincode = "1.3.3"
flate2 = "1.0.30"
serde_with = "3.8.1"
dateparser = "0.2.1"

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
tokio-test = "0.4.3"
serial_test = "3.0.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
proptest = "1.2.0"
proptest-derive = "0.3.0"

[[bench]]
name = "grid_benchmark"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os', '-g'] # TODO: -g seems to fix the name mangling problem

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O', '-g']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
