[package]
name = "quadratic-grid-offsets"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quadratic-core = { path = "../quadratic-core" }
serde = "1.0.196"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
wasm-bindgen = "0.2.91"
wasm-bindgen-test = "0.3.41"

[lib]
crate-type = ["cdylib", "rlib"]
