[package]
name = "quadratic-multiplayer"
version = "0.1.0"
edition = "2021"
authors = ["David DiMaria <david.dimaria@quadratichq.com>"]

[dependencies]
axum = { version = "0.7.1", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
chrono = { version= "0.4.31", features = ["serde"] }
dashmap = { version = "5.5.3", features = ["rayon", "serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.29"
futures-util = { version = "0.3.29", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
jsonwebtoken = "9.2.0"
quadratic-core = { path = "../quadratic-core", features = ["multiplayer"] }
quadratic-rust-shared = { path = "../quadratic-rust-shared" }
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["json", "serde_json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
fake = { version = "2.9.1", features = ["derive"] }
