[package]
name = "quadratic-multiplayer"
version = "0.7.0"
edition = "2024"
authors = ["David DiMaria <david.dimaria@quadratichq.com>"]

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-macros = { version = "0.5.0" }
base64 = "0.22.1"
chrono = { version = "=0.4.39", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.29"
futures-util = { version = "0.3.29", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.4.0"
jsonwebtoken = "9.2.0"
quadratic-core = { path = "../quadratic-core", default-features = false, features = [
    "console_error_panic_hook",
    "js",
] }
quadratic-rust-shared = { path = "../quadratic-rust-shared" }
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["json", "serde_json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = "0.26"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
fake = { version = "4.0.0", features = ["derive"] }

[features]
default = ["files"]
multiplayer = []
files = []

# patch for breaking changes in zip-rs/zip2 v2.6.0
# https://github.com/quadratichq/quadratic/pull/2652#issue-2970668055
[patch.crates-io]
zip = { git = "https://github.com/zip-rs/zip2", rev = "77cde6a" }

[patch.'https://github.com/zip-rs/zip2']
zip = { git = "https://github.com//zip-rs/zip2", rev = "77cde6a" }
