[package]
name = "quadratic-rust-client"
version = "0.5.3"
edition = "2021"
authors = ["David Figatner <david.figatner@quadratichq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
quadratic-core = { path = "../quadratic-core" }
serde = "1.0.196"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-test = "0.3.41"
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = "0.3.69"
chrono = "0.4.38"

[lib]
crate-type = ["cdylib", "rlib"]
