[package]
name = "quadratic-rust-client"
version = "0.5.4"
edition = "2021"
authors = ["David Figatner <david.figatner@quadratichq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
quadratic-core = { path = "../quadratic-core" }
serde = "1.0.196"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-test = "0.3.41"
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = "0.3.69"
chrono = "0.4.38"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os', '-g'] # TODO: -g seems to fix the name mangling problem

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O', '-g']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
